Creado mediante Colaboratory

--- a/Evaluacion_imputacion.ipynb
+++ b/Evaluacion_imputacion.ipynb
@@ -95,7 +95,7 @@
       },
       "outputs": [],
       "source": [
-        "#Funciones\n",
+        "#---------------------------------FUNCIONES-------------------------------------\n",
         "#Funcion para calcular el MAPE\n",
         "def calculo_mape(y_true, y_pred):\n",
         "  mask = (y_true != 0)\n",
@@ -105,6 +105,7 @@
         "  percentage_errors = absolute_errors / y_true_masked\n",
         "  mape = np.mean(percentage_errors) * 100\n",
         "  return mape\n",
+        "#-------------------------------------------------------------------------------\n",
         "# Funcion para calcular parametros de rendimiento a partir de un parametro de medicion\n",
         "def parametros_rendimiento(y_pred, y_true, medicion):\n",
         "    # Calcular las métricas de rendimiento\n",
@@ -127,7 +128,8 @@
         "    print(\"mae = \", mae)\n",
         "    print(\"r2 = \", r2)\n",
         "    print(\"mape = \", mape_)\n",
-        "    return mse, mae, r2, mape_"
+        "    return mse, mae, r2, mape_\n",
+        "#-------------------------------------------------------------------------------"
       ]
     },
     {
@@ -149,6 +151,7 @@
       },
       "outputs": [],
       "source": [
+        "#Descarga de los archivos que contienen los modelos inferidos y los datos asociados de entrenamiento y testeo\n",
         "ruta_drive = '/content/drive/MyDrive/Deep Learning/TG/'\n",
         "with open(ruta_drive + 'trazados.pkl', 'rb') as f:\n",
         "    trazados_cargados = pickle.load(f)\n",
@@ -166,7 +169,7 @@
       },
       "outputs": [],
       "source": [
-        "data = pd.read_csv(\"/content/drive/MyDrive/Deep Learning/TG/Preprocesamiento/data_training_copy.csv\")"
+        "data = pd.read_csv(\"/content/drive/MyDrive/Deep Learning/TG/Preprocesamiento/datos_sintesis.csv\")"
       ]
     },
     {
@@ -788,9 +791,11 @@
         }
       ],
       "source": [
+        "#-----------------Definicion de los parametros de la inferencia----------------\n",
         "draws = 1000\n",
         "tune = 500\n",
         "chains = 5\n",
+        "#------------------------------------------------------------------------------\n",
         "#save de las predicciones y variables de rendimiento\n",
         "prediccion_mean = {}\n",
         "prediccion = {}\n",
@@ -809,33 +814,42 @@
         "  r2_fold = []\n",
         "  for i in range(1,6): # Se recorre cada fold para cada variable de interes\n",
         "\n",
-        "#--------------CARGA DE DATOS---------------------\n",
+        "#-----------------------------CARGA DE DATOS------------------------------------\n",
         "    y_mean = data_train[f'data_train_{datos}'][f'train_fold_{i}']['y_mean'] #se carga la media de la salida\n",
         "    y_std = data_train[f'data_train_{datos}'][f'train_fold_{i}']['y_std'] #se carga la std de la salida\n",
         "    betas = [] #save para los betas generados en el sampleo\n",
         "    print(f'fold#{i},{datos}')\n",
         "    for name in names:\n",
         "      betas.append(np.concatenate(trazados_cargados[f'trace_{datos}'][f'trace_fold{i}']['posterior'][name]))\n",
-        "#---------------ESTIMACION----------------------\n",
+        "#-------------------------------------------------------------------------------\n",
+        "#------------------------------PREDICCION---------------------------------------\n",
         "    y_pred = (np.asarray(trazados_cargados[f'trace_{datos}'][f'trace_fold{i}']['posterior'][datos]).reshape((draws*chains)) + np.dot(data_test[f'data_test_{datos}'][f'test_fold_{i}']['x_test'],np.asarray(betas))) # se genera la prediccion de la BLR\n",
         "    y_pred=y_pred*(y_std) + y_mean # se remueve la normalizacion\n",
         "    std = np.std(y_pred, axis = 1)\n",
+        "    #----------------VALOR FRECUENCTISTA DE LA PREDICCION-----------------------\n",
         "    mean = np.mean(y_pred, axis = 1) # se calcula la media para la comparacion de resultados frecuentistas\n",
+        "    #---------------------------------------------------------------------------\n",
+        "#-------------------------------------------------------------------------------\n",
+        "#-------------------------SAVE DE LAS PREDICCIONES------------------------------\n",
         "    prediccion_mean_fold[f'fold_{i}'] = mean\n",
         "    prediccion_fold[f'fold_{i}'] = y_pred\n",
         "    desviacion_std_fold[f'fold_{i}'] = std\n",
         "    print(\"Desviacion estandar: \", std)\n",
         "    print(\"prediccion:\", mean)\n",
         "    print(\"y_test\", data_test[f'data_test_{datos}'][f'test_fold_{i}']['y_test'])\n",
-        "#---------------EVALUACION----------------------\n",
+        "#-------------------------------------------------------------------------------\n",
+        "#------------------------------EVALUACION---------------------------------------\n",
         "    mse, mae, r2, mape = parametros_rendimiento(y_pred, data_test[f'data_test_{datos}'][f'test_fold_{i}']['y_test'], \"mean\") # calculo de las metricas de rendimiento respecto a la media\n",
         "    mape_fold.append(mape)\n",
         "    r2_fold.append(r2)\n",
+        "#-------------------------------------------------------------------------------\n",
+        "#-----------SAVE DE RESULTADOS DE LAS PREDICCIONES Y EVALUACION-----------------\n",
         "  mape_dato[f\"{datos}\"] = mape_fold\n",
         "  r2_dato[f\"{datos}\"] = r2_fold\n",
         "  prediccion_mean[f'prediccion_{datos}'] = prediccion_mean_fold\n",
         "  prediccion[f'prediccion_{datos}'] = prediccion_fold\n",
-        "  desviacion_std[f'desviacion_std_{datos}'] = desviacion_std_fold"
+        "  desviacion_std[f'desviacion_std_{datos}'] = desviacion_std_fold\n",
+        "#-------------------------------------------------------------------------------"
       ]
     },
     {
@@ -2590,7 +2604,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbLzJohjbcDxrNt53FKPTL",
+      "authorship_tag": "ABX9TyOXkum7xtVhpJhZBEHJbLMM",
       "include_colab_link": true
     },
     "kernelspec": {
